tests/compile-fail/lexer/names/sigil2.stderr
error: Invalid token
  ┌─ /home/nixon/git/skate/./tests/compile-fail/lexer/names/sigil2.sk:1:7
  │
1 │ fn foo$bar() {}
  │       ^

